# serializer version: 1
# name: TestCLIInterface.test_cli_help
  '''
                                                                                  
   Usage: main [OPTIONS] [INPUT_FILE]                                             
                                                                                  
   Parse Markdown and turn it into nicely-formatted text for terminal display.    
   If no INPUT_FILE is provided, reads from stdin.                                
   Features:                                                                      
   • 256-color support with different shades for headers                          
   • Syntax highlighting for code blocks                                          
   • Proper word wrapping based on terminal width                                 
   • Support for all standard markdown elements                                   
   • Streaming renderer with backtracking for LLM output                          
   • Character-by-character processing with minimal flickering                    
                                                                                  
   Examples:                                                                      
   md2term README.md                    # Render a markdown file                  
   echo "# Hello" | md2term             # Render from stdin                       
   cat file.md | pv -qL 20 | md2term    # Simulate streaming input                
   md2term --width 60 README.md         # Set custom width                        
                                                                                  
   The renderer automatically handles both complete files and streaming input,    
   with intelligent backtracking when markdown syntax is incomplete.              
                                                                                  
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --width    -w  INTEGER  Override terminal width                              │
  │ --version               Show the version and exit.                           │
  │ --help                  Show this message and exit.                          │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
  
  '''
# ---
# name: TestCLIInterface.test_cli_version
  '''
  main, version 0.1.0
  
  '''
# ---
# name: TestCLIInterface.test_cli_with_file_input
  '''
  [96m────────────────────────────────────────────────────────────────────────────────[0m
  [1;96m                                  [0m[1;96mTest Header[0m[1;96m                                   [0m
  [96m────────────────────────────────────────────────────────────────────────────────[0m
  
  This is a [1mtest[0m paragraph.
  
  '''
# ---
# name: TestCLIInterface.test_cli_with_stdin
  '''
  [96m────────────────────────────────────────────────────────────────────────────────[0m
  [1;96m                                  [0m[1;96mTest Header[0m[1;96m                                   [0m
  [96m────────────────────────────────────────────────────────────────────────────────[0m
  
  This is a [1mtest[0m paragraph with [1;31;48;5;237mcode[0m.
  
  
  '''
# ---
# name: TestCLIInterface.test_cli_with_width_option
  '''
  [96m────────────────────────────────────────[0m
  [1;96m              [0m[1;96mTest Header[0m[1;96m               [0m
  [96m────────────────────────────────────────[0m
  
  This is a very long paragraph that 
  should wrap differently when the 
  terminal width is changed to a smaller 
  value.
  
  
  '''
# ---
# name: TestEdgeCases.test_cli_nonexistent_file
  '''
                                                                                  
   Usage: main [OPTIONS] [INPUT_FILE]                                             
                                                                                  
   Try 'main --help' for help                                                     
  ╭─ Error ──────────────────────────────────────────────────────────────────────╮
  │ Invalid value for '[INPUT_FILE]': 'nonexistent.md': No such file or          │
  │ directory                                                                    │
  ╰──────────────────────────────────────────────────────────────────────────────╯
                                                                                  
  
  '''
# ---
# name: TestEdgeCases.test_code_block_without_language
  '''
  [2m╭──────────────────────────────────────────────────────────────────────────────╮[0m
  [2m│[0m [38;2;248;248;242;49mdef hello():[0m                                                                 [2m│[0m
  [2m│[0m [38;2;248;248;242;49m    print("Hello, World!")[0m                                                   [2m│[0m
  [2m╰──────────────────────────────────────────────────────────────────────────────╯[0m
  
  '''
# ---
# name: TestEdgeCases.test_empty_input
  '''
  
  
  '''
# ---
# name: TestEdgeCases.test_nested_formatting
  '''
  This has [1mbold with [0m[1;3mitalic inside[0m[1m and [0m[1;31;48;5;237mcode[0m text.
  
  '''
# ---
# name: TestEdgeCases.test_only_whitespace
  '''
  
  
  '''
# ---
# name: TestEdgeCases.test_very_narrow_width
  '''
  This is a long 
  sentence that should
  wrap multiple times 
  when rendered in a 
  very narrow 
  terminal.
  
  '''
# ---
# name: TestMarkdownFeatures.test_blockquotes
  '''
  [2;34m│[0m [2;3;34mThis is a blockquote with some important information. It can span multiple [0m
  [2;34m│[0m [2;3;34mlines and contain bold and italic text.[0m
  [2;34m│[0m
  [2;34m│[0m [2;3;34mIt can even contain inline code and links [0m[1;2;3;34m([0m[2;3;4;34mhttps://example.com[0m[2;3;4;34m)[0m[2;3;4;34m.[0m
  
  '''
# ---
# name: TestMarkdownFeatures.test_code_blocks_bash
  '''
  [2m╭──────────────────────────────────────────────────────────────────────────────╮[0m
  [2m│[0m [38;2;149;144;119;49m# Install dependencies[0m                                                       [2m│[0m
  [2m│[0m [38;2;248;248;242;49muv[0m[38;2;248;248;242;49m [0m[38;2;248;248;242;49madd[0m[38;2;248;248;242;49m [0m[38;2;248;248;242;49mclick[0m[38;2;248;248;242;49m [0m[38;2;248;248;242;49mrich[0m[38;2;248;248;242;49m [0m[38;2;248;248;242;49mmistune[0m                                                    [2m│[0m
  [2m│[0m                                                                              [2m│[0m
  [2m│[0m [38;2;149;144;119;49m# Run the program[0m                                                            [2m│[0m
  [2m│[0m [38;2;248;248;242;49mpython[0m[38;2;248;248;242;49m [0m[38;2;248;248;242;49mmd2term.py[0m[38;2;248;248;242;49m [0m[38;2;248;248;242;49mREADME.md[0m                                                  [2m│[0m
  [2m│[0m                                                                              [2m│[0m
  [2m│[0m [38;2;149;144;119;49m# Use with pipes[0m                                                             [2m│[0m
  [2m│[0m [38;2;248;248;242;49mcurl[0m[38;2;248;248;242;49m [0m[38;2;248;248;242;49m-s[0m[38;2;248;248;242;49m [0m[38;2;248;248;242;49mhttps://raw.githubusercontent.com/user/repo/main/README.md[0m[38;2;248;248;242;49m [0m[38;2;248;248;242;49m|[0m[38;2;248;248;242;49m [0m[38;2;248;248;242;49mpython[0m[38;2;248;248;242;49m [0m [2m│[0m
  [2m╰──────────────────────────────────────────────────────────────────────────────╯[0m
  
  '''
# ---
# name: TestMarkdownFeatures.test_code_blocks_javascript
  '''
  [2m╭──────────────────────────────────────────────────────────────────────────────╮[0m
  [2m│[0m [38;2;102;217;239;49mfunction[0m[38;2;248;248;242;49m [0m[38;2;166;226;46;49mgreetUser[0m[38;2;248;248;242;49m([0m[38;2;166;226;46;49mname[0m[38;2;248;248;242;49m)[0m[38;2;248;248;242;49m [0m[38;2;248;248;242;49m{[0m                                                   [2m│[0m
  [2m│[0m [38;2;248;248;242;49m  [0m[38;2;102;217;239;49mreturn[0m[38;2;248;248;242;49m [0m[38;2;230;219;116;49m`[0m[38;2;230;219;116;49mHello, [0m[38;2;230;219;116;49m${[0m[38;2;166;226;46;49mname[0m[38;2;230;219;116;49m}[0m[38;2;230;219;116;49m! Welcome to our application.[0m[38;2;230;219;116;49m`[0m[38;2;248;248;242;49m;[0m                      [2m│[0m
  [2m│[0m [38;2;248;248;242;49m}[0m                                                                            [2m│[0m
  [2m│[0m                                                                              [2m│[0m
  [2m│[0m [38;2;102;217;239;49mconst[0m[38;2;248;248;242;49m [0m[38;2;166;226;46;49musers[0m[38;2;248;248;242;49m [0m[38;2;255;70;137;49m=[0m[38;2;248;248;242;49m [0m[38;2;248;248;242;49m[[0m[38;2;230;219;116;49m"Alice"[0m[38;2;248;248;242;49m,[0m[38;2;248;248;242;49m [0m[38;2;230;219;116;49m"Bob"[0m[38;2;248;248;242;49m,[0m[38;2;248;248;242;49m [0m[38;2;230;219;116;49m"Charlie"[0m[38;2;248;248;242;49m][0m[38;2;248;248;242;49m;[0m                                   [2m│[0m
  [2m│[0m [38;2;166;226;46;49musers[0m[38;2;248;248;242;49m.[0m[38;2;166;226;46;49mforEach[0m[38;2;248;248;242;49m([0m[38;2;248;248;242;49m([0m[38;2;166;226;46;49muser[0m[38;2;248;248;242;49m)[0m[38;2;248;248;242;49m [0m[38;2;248;248;242;49m=>[0m[38;2;248;248;242;49m [0m[38;2;166;226;46;49mconsole[0m[38;2;248;248;242;49m.[0m[38;2;166;226;46;49mlog[0m[38;2;248;248;242;49m([0m[38;2;166;226;46;49mgreetUser[0m[38;2;248;248;242;49m([0m[38;2;166;226;46;49muser[0m[38;2;248;248;242;49m)[0m[38;2;248;248;242;49m)[0m[38;2;248;248;242;49m)[0m[38;2;248;248;242;49m;[0m                       [2m│[0m
  [2m╰──────────────────────────────────────────────────────────────────────────────╯[0m
  
  '''
# ---
# name: TestMarkdownFeatures.test_code_blocks_python
  '''
  [2m╭──────────────────────────────────────────────────────────────────────────────╮[0m
  [2m│[0m [38;2;102;217;239;49mdef[0m[38;2;248;248;242;49m [0m[38;2;166;226;46;49mfibonacci[0m[38;2;248;248;242;49m([0m[38;2;248;248;242;49mn[0m[38;2;248;248;242;49m)[0m[38;2;248;248;242;49m:[0m                                                            [2m│[0m
  [2m│[0m [38;2;248;248;242;49m    [0m[38;2;230;219;116;49m"""Generate Fibonacci sequence up to n terms."""[0m                         [2m│[0m
  [2m│[0m [38;2;248;248;242;49m    [0m[38;2;102;217;239;49mif[0m[38;2;248;248;242;49m [0m[38;2;248;248;242;49mn[0m[38;2;248;248;242;49m [0m[38;2;255;70;137;49m<[0m[38;2;255;70;137;49m=[0m[38;2;248;248;242;49m [0m[38;2;174;129;255;49m0[0m[38;2;248;248;242;49m:[0m                                                               [2m│[0m
  [2m│[0m [38;2;248;248;242;49m        [0m[38;2;102;217;239;49mreturn[0m[38;2;248;248;242;49m [0m[38;2;248;248;242;49m[[0m[38;2;248;248;242;49m][0m                                                            [2m│[0m
  [2m│[0m [38;2;248;248;242;49m    [0m[38;2;102;217;239;49melif[0m[38;2;248;248;242;49m [0m[38;2;248;248;242;49mn[0m[38;2;248;248;242;49m [0m[38;2;255;70;137;49m==[0m[38;2;248;248;242;49m [0m[38;2;174;129;255;49m1[0m[38;2;248;248;242;49m:[0m                                                             [2m│[0m
  [2m│[0m [38;2;248;248;242;49m        [0m[38;2;102;217;239;49mreturn[0m[38;2;248;248;242;49m [0m[38;2;248;248;242;49m[[0m[38;2;174;129;255;49m0[0m[38;2;248;248;242;49m][0m                                                           [2m│[0m
  [2m│[0m [38;2;248;248;242;49m    [0m[38;2;102;217;239;49melif[0m[38;2;248;248;242;49m [0m[38;2;248;248;242;49mn[0m[38;2;248;248;242;49m [0m[38;2;255;70;137;49m==[0m[38;2;248;248;242;49m [0m[38;2;174;129;255;49m2[0m[38;2;248;248;242;49m:[0m                                                             [2m│[0m
  [2m│[0m [38;2;248;248;242;49m        [0m[38;2;102;217;239;49mreturn[0m[38;2;248;248;242;49m [0m[38;2;248;248;242;49m[[0m[38;2;174;129;255;49m0[0m[38;2;248;248;242;49m,[0m[38;2;248;248;242;49m [0m[38;2;174;129;255;49m1[0m[38;2;248;248;242;49m][0m                                                        [2m│[0m
  [2m│[0m                                                                              [2m│[0m
  [2m│[0m [38;2;248;248;242;49m    [0m[38;2;248;248;242;49msequence[0m[38;2;248;248;242;49m [0m[38;2;255;70;137;49m=[0m[38;2;248;248;242;49m [0m[38;2;248;248;242;49m[[0m[38;2;174;129;255;49m0[0m[38;2;248;248;242;49m,[0m[38;2;248;248;242;49m [0m[38;2;174;129;255;49m1[0m[38;2;248;248;242;49m][0m                                                        [2m│[0m
  [2m│[0m [38;2;248;248;242;49m    [0m[38;2;102;217;239;49mfor[0m[38;2;248;248;242;49m [0m[38;2;248;248;242;49mi[0m[38;2;248;248;242;49m [0m[38;2;255;70;137;49min[0m[38;2;248;248;242;49m [0m[38;2;248;248;242;49mrange[0m[38;2;248;248;242;49m([0m[38;2;174;129;255;49m2[0m[38;2;248;248;242;49m,[0m[38;2;248;248;242;49m [0m[38;2;248;248;242;49mn[0m[38;2;248;248;242;49m)[0m[38;2;248;248;242;49m:[0m                                                    [2m│[0m
  [2m│[0m [38;2;248;248;242;49m        [0m[38;2;248;248;242;49msequence[0m[38;2;255;70;137;49m.[0m[38;2;248;248;242;49mappend[0m[38;2;248;248;242;49m([0m[38;2;248;248;242;49msequence[0m[38;2;248;248;242;49m[[0m[38;2;248;248;242;49mi[0m[38;2;255;70;137;49m-[0m[38;2;174;129;255;49m1[0m[38;2;248;248;242;49m][0m[38;2;248;248;242;49m [0m[38;2;255;70;137;49m+[0m[38;2;248;248;242;49m [0m[38;2;248;248;242;49msequence[0m[38;2;248;248;242;49m[[0m[38;2;248;248;242;49mi[0m[38;2;255;70;137;49m-[0m[38;2;174;129;255;49m2[0m[38;2;248;248;242;49m][0m[38;2;248;248;242;49m)[0m                       [2m│[0m
  [2m│[0m                                                                              [2m│[0m
  [2m│[0m [38;2;248;248;242;49m    [0m[38;2;102;217;239;49mreturn[0m[38;2;248;248;242;49m [0m[38;2;248;248;242;49msequence[0m                                                          [2m│[0m
  [2m│[0m                                                                              [2m│[0m
  [2m│[0m [38;2;149;144;119;49m# Example usage[0m                                                              [2m│[0m
  [2m│[0m [38;2;248;248;242;49mprint[0m[38;2;248;248;242;49m([0m[38;2;248;248;242;49mfibonacci[0m[38;2;248;248;242;49m([0m[38;2;174;129;255;49m10[0m[38;2;248;248;242;49m)[0m[38;2;248;248;242;49m)[0m                                                         [2m│[0m
  [2m╰──────────────────────────────────────────────────────────────────────────────╯[0m
  
  '''
# ---
# name: TestMarkdownFeatures.test_complete_document
  '''
  [96m────────────────────────────────────────────────────────────────────────────────[0m
  [1;96m                                [0m[1;96mMain Title (H1)[0m[1;96m                                 [0m
  [96m────────────────────────────────────────────────────────────────────────────────[0m
  
  This is a paragraph with [1mbold text[0m, [3mitalic text[0m, and [1;31;48;5;237minline code[0m. Here's a [1;4;34mlink [0m
  [1;4;34mto example[0m[2;34m (https://example.com)[0m and some more text.
  
  [1;94mSubsection (H2)[0m
  [34m────────────────────────────────────────────────────────────────────────────────[0m
  
  [1;95mSub-subsection (H3)[0m
  
  [1;93mLevel 4 Header (H4)[0m
  
  [1;92mLevel 5 Header (H5)[0m
  
  [1;97mLevel 6 Header (H6)[0m
  
  [1;94mCode Examples[0m
  [34m────────────────────────────────────────────────────────────────────────────────[0m
  
  Here's some inline code: [1;31;48;5;237mprint("Hello, World!")[0m in the middle of a sentence.
  
  [1;95mPython Code Block[0m
  
  [2m╭──────────────────────────────────────────────────────────────────────────────╮[0m
  [2m│[0m [38;2;102;217;239;49mdef[0m[38;2;248;248;242;49m [0m[38;2;166;226;46;49mfibonacci[0m[38;2;248;248;242;49m([0m[38;2;248;248;242;49mn[0m[38;2;248;248;242;49m)[0m[38;2;248;248;242;49m:[0m                                                            [2m│[0m
  [2m│[0m [38;2;248;248;242;49m    [0m[38;2;230;219;116;49m"""Generate Fibonacci sequence up to n terms."""[0m                         [2m│[0m
  [2m│[0m [38;2;248;248;242;49m    [0m[38;2;102;217;239;49mif[0m[38;2;248;248;242;49m [0m[38;2;248;248;242;49mn[0m[38;2;248;248;242;49m [0m[38;2;255;70;137;49m<[0m[38;2;255;70;137;49m=[0m[38;2;248;248;242;49m [0m[38;2;174;129;255;49m0[0m[38;2;248;248;242;49m:[0m                                                               [2m│[0m
  [2m│[0m [38;2;248;248;242;49m        [0m[38;2;102;217;239;49mreturn[0m[38;2;248;248;242;49m [0m[38;2;248;248;242;49m[[0m[38;2;248;248;242;49m][0m                                                            [2m│[0m
  [2m│[0m [38;2;248;248;242;49m    [0m[38;2;102;217;239;49melif[0m[38;2;248;248;242;49m [0m[38;2;248;248;242;49mn[0m[38;2;248;248;242;49m [0m[38;2;255;70;137;49m==[0m[38;2;248;248;242;49m [0m[38;2;174;129;255;49m1[0m[38;2;248;248;242;49m:[0m                                                             [2m│[0m
  [2m│[0m [38;2;248;248;242;49m        [0m[38;2;102;217;239;49mreturn[0m[38;2;248;248;242;49m [0m[38;2;248;248;242;49m[[0m[38;2;174;129;255;49m0[0m[38;2;248;248;242;49m][0m                                                           [2m│[0m
  [2m│[0m [38;2;248;248;242;49m    [0m[38;2;102;217;239;49melif[0m[38;2;248;248;242;49m [0m[38;2;248;248;242;49mn[0m[38;2;248;248;242;49m [0m[38;2;255;70;137;49m==[0m[38;2;248;248;242;49m [0m[38;2;174;129;255;49m2[0m[38;2;248;248;242;49m:[0m                                                             [2m│[0m
  [2m│[0m [38;2;248;248;242;49m        [0m[38;2;102;217;239;49mreturn[0m[38;2;248;248;242;49m [0m[38;2;248;248;242;49m[[0m[38;2;174;129;255;49m0[0m[38;2;248;248;242;49m,[0m[38;2;248;248;242;49m [0m[38;2;174;129;255;49m1[0m[38;2;248;248;242;49m][0m                                                        [2m│[0m
  [2m│[0m                                                                              [2m│[0m
  [2m│[0m [38;2;248;248;242;49m    [0m[38;2;248;248;242;49msequence[0m[38;2;248;248;242;49m [0m[38;2;255;70;137;49m=[0m[38;2;248;248;242;49m [0m[38;2;248;248;242;49m[[0m[38;2;174;129;255;49m0[0m[38;2;248;248;242;49m,[0m[38;2;248;248;242;49m [0m[38;2;174;129;255;49m1[0m[38;2;248;248;242;49m][0m                                                        [2m│[0m
  [2m│[0m [38;2;248;248;242;49m    [0m[38;2;102;217;239;49mfor[0m[38;2;248;248;242;49m [0m[38;2;248;248;242;49mi[0m[38;2;248;248;242;49m [0m[38;2;255;70;137;49min[0m[38;2;248;248;242;49m [0m[38;2;248;248;242;49mrange[0m[38;2;248;248;242;49m([0m[38;2;174;129;255;49m2[0m[38;2;248;248;242;49m,[0m[38;2;248;248;242;49m [0m[38;2;248;248;242;49mn[0m[38;2;248;248;242;49m)[0m[38;2;248;248;242;49m:[0m                                                    [2m│[0m
  [2m│[0m [38;2;248;248;242;49m        [0m[38;2;248;248;242;49msequence[0m[38;2;255;70;137;49m.[0m[38;2;248;248;242;49mappend[0m[38;2;248;248;242;49m([0m[38;2;248;248;242;49msequence[0m[38;2;248;248;242;49m[[0m[38;2;248;248;242;49mi[0m[38;2;255;70;137;49m-[0m[38;2;174;129;255;49m1[0m[38;2;248;248;242;49m][0m[38;2;248;248;242;49m [0m[38;2;255;70;137;49m+[0m[38;2;248;248;242;49m [0m[38;2;248;248;242;49msequence[0m[38;2;248;248;242;49m[[0m[38;2;248;248;242;49mi[0m[38;2;255;70;137;49m-[0m[38;2;174;129;255;49m2[0m[38;2;248;248;242;49m][0m[38;2;248;248;242;49m)[0m                       [2m│[0m
  [2m│[0m                                                                              [2m│[0m
  [2m│[0m [38;2;248;248;242;49m    [0m[38;2;102;217;239;49mreturn[0m[38;2;248;248;242;49m [0m[38;2;248;248;242;49msequence[0m                                                          [2m│[0m
  [2m│[0m                                                                              [2m│[0m
  [2m│[0m [38;2;149;144;119;49m# Example usage[0m                                                              [2m│[0m
  [2m│[0m [38;2;248;248;242;49mprint[0m[38;2;248;248;242;49m([0m[38;2;248;248;242;49mfibonacci[0m[38;2;248;248;242;49m([0m[38;2;174;129;255;49m10[0m[38;2;248;248;242;49m)[0m[38;2;248;248;242;49m)[0m                                                         [2m│[0m
  [2m╰──────────────────────────────────────────────────────────────────────────────╯[0m
  
  [1;95mJavaScript Code Block[0m
  
  [2m╭──────────────────────────────────────────────────────────────────────────────╮[0m
  [2m│[0m [38;2;102;217;239;49mfunction[0m[38;2;248;248;242;49m [0m[38;2;166;226;46;49mgreetUser[0m[38;2;248;248;242;49m([0m[38;2;166;226;46;49mname[0m[38;2;248;248;242;49m)[0m[38;2;248;248;242;49m [0m[38;2;248;248;242;49m{[0m                                                   [2m│[0m
  [2m│[0m [38;2;248;248;242;49m  [0m[38;2;102;217;239;49mreturn[0m[38;2;248;248;242;49m [0m[38;2;230;219;116;49m`[0m[38;2;230;219;116;49mHello, [0m[38;2;230;219;116;49m${[0m[38;2;166;226;46;49mname[0m[38;2;230;219;116;49m}[0m[38;2;230;219;116;49m! Welcome to our application.[0m[38;2;230;219;116;49m`[0m[38;2;248;248;242;49m;[0m                      [2m│[0m
  [2m│[0m [38;2;248;248;242;49m}[0m                                                                            [2m│[0m
  [2m│[0m                                                                              [2m│[0m
  [2m│[0m [38;2;102;217;239;49mconst[0m[38;2;248;248;242;49m [0m[38;2;166;226;46;49musers[0m[38;2;248;248;242;49m [0m[38;2;255;70;137;49m=[0m[38;2;248;248;242;49m [0m[38;2;248;248;242;49m[[0m[38;2;230;219;116;49m"Alice"[0m[38;2;248;248;242;49m,[0m[38;2;248;248;242;49m [0m[38;2;230;219;116;49m"Bob"[0m[38;2;248;248;242;49m,[0m[38;2;248;248;242;49m [0m[38;2;230;219;116;49m"Charlie"[0m[38;2;248;248;242;49m][0m[38;2;248;248;242;49m;[0m                                   [2m│[0m
  [2m│[0m [38;2;166;226;46;49musers[0m[38;2;248;248;242;49m.[0m[38;2;166;226;46;49mforEach[0m[38;2;248;248;242;49m([0m[38;2;248;248;242;49m([0m[38;2;166;226;46;49muser[0m[38;2;248;248;242;49m)[0m[38;2;248;248;242;49m [0m[38;2;248;248;242;49m=>[0m[38;2;248;248;242;49m [0m[38;2;166;226;46;49mconsole[0m[38;2;248;248;242;49m.[0m[38;2;166;226;46;49mlog[0m[38;2;248;248;242;49m([0m[38;2;166;226;46;49mgreetUser[0m[38;2;248;248;242;49m([0m[38;2;166;226;46;49muser[0m[38;2;248;248;242;49m)[0m[38;2;248;248;242;49m)[0m[38;2;248;248;242;49m)[0m[38;2;248;248;242;49m;[0m                       [2m│[0m
  [2m╰──────────────────────────────────────────────────────────────────────────────╯[0m
  
  [1;94mLists[0m
  [34m────────────────────────────────────────────────────────────────────────────────[0m
  
  [1;95mUnordered List[0m
  
  [1;33m•[0m First item
  [1;33m•[0m Second item with bold text
  [1;33m•[0m Third item with italic text
  [1;33m•[0m Fourth item with inline code
  
  [1;95mOrdered List[0m
  
  [1;36m1[0m[1;36m.[0m First numbered item
  [1;36m2[0m[1;36m.[0m Second numbered item
  [1;36m3[0m[1;36m.[0m Third numbered item with a link [1m([0m[4;94mhttps://example.com[0m[4;94m)[0m
  [1;36m4[0m[1;36m.[0m Fourth numbered item
  
  [1;94mBlockquotes[0m
  [34m────────────────────────────────────────────────────────────────────────────────[0m
  
  [2;34m│[0m [2;3;34mThis is a blockquote with some important information. It can span multiple [0m
  [2;34m│[0m [2;3;34mlines and contain bold and italic text.[0m
  [2;34m│[0m
  [2;34m│[0m [2;3;34mIt can even contain inline code and links [0m[1;2;3;34m([0m[2;3;4;34mhttps://example.com[0m[2;3;4;34m)[0m[2;3;4;34m.[0m
  
  [2;34m│[0m [2;3;34mThis is another blockquote to show multiple quotes.[0m
  
  [1;94mHorizontal Rules[0m
  [34m────────────────────────────────────────────────────────────────────────────────[0m
  
  Here's some text before a horizontal rule.
  
  [2m────────────────────────────────────────────────────────────────────────────────[0m
  
  And here's some text after the horizontal rule.
  
  [1;94mMixed Content[0m
  [34m────────────────────────────────────────────────────────────────────────────────[0m
  
  This paragraph contains [1mbold text[0m, [3mitalic text[0m, [1;31;48;5;237minline code[0m, and a [1;4;34mlink to [0m
  [1;4;34mdocumentation[0m[2;34m (https://docs.example.com)[0m.
  
  The next paragraph shows how text wraps naturally based on the terminal width, 
  which is especially useful for reading long documents in the terminal like man 
  pages.
  
  [1;95mFinal Code Example[0m
  
  [2m╭──────────────────────────────────────────────────────────────────────────────╮[0m
  [2m│[0m [38;2;149;144;119;49m# Install dependencies[0m                                                       [2m│[0m
  [2m│[0m [38;2;248;248;242;49muv[0m[38;2;248;248;242;49m [0m[38;2;248;248;242;49madd[0m[38;2;248;248;242;49m [0m[38;2;248;248;242;49mclick[0m[38;2;248;248;242;49m [0m[38;2;248;248;242;49mrich[0m[38;2;248;248;242;49m [0m[38;2;248;248;242;49mmistune[0m                                                    [2m│[0m
  [2m│[0m                                                                              [2m│[0m
  [2m│[0m [38;2;149;144;119;49m# Run the program[0m                                                            [2m│[0m
  [2m│[0m [38;2;248;248;242;49mpython[0m[38;2;248;248;242;49m [0m[38;2;248;248;242;49mmd2term.py[0m[38;2;248;248;242;49m [0m[38;2;248;248;242;49mREADME.md[0m                                                  [2m│[0m
  [2m│[0m                                                                              [2m│[0m
  [2m│[0m [38;2;149;144;119;49m# Use with pipes[0m                                                             [2m│[0m
  [2m│[0m [38;2;248;248;242;49mcurl[0m[38;2;248;248;242;49m [0m[38;2;248;248;242;49m-s[0m[38;2;248;248;242;49m [0m[38;2;248;248;242;49mhttps://raw.githubusercontent.com/user/repo/main/README.md[0m[38;2;248;248;242;49m [0m[38;2;248;248;242;49m|[0m[38;2;248;248;242;49m [0m[38;2;248;248;242;49mpython[0m[38;2;248;248;242;49m [0m [2m│[0m
  [2m╰──────────────────────────────────────────────────────────────────────────────╯[0m
  
  That's all folks!
  
  '''
# ---
# name: TestMarkdownFeatures.test_headings_all_levels
  '''
  [96m────────────────────────────────────────────────────────────────────────────────[0m
  [1;96m                                [0m[1;96mMain Title (H1)[0m[1;96m                                 [0m
  [96m────────────────────────────────────────────────────────────────────────────────[0m
  
  [1;94mSubsection (H2)[0m
  [34m────────────────────────────────────────────────────────────────────────────────[0m
  
  [1;95mSub-subsection (H3)[0m
  
  [1;93mLevel 4 Header (H4)[0m
  
  [1;92mLevel 5 Header (H5)[0m
  
  [1;97mLevel 6 Header (H6)[0m
  
  '''
# ---
# name: TestMarkdownFeatures.test_horizontal_rules
  '''
  Here's some text before a horizontal rule.
  
  [2m────────────────────────────────────────────────────────────────────────────────[0m
  
  And here's some text after the horizontal rule.
  
  '''
# ---
# name: TestMarkdownFeatures.test_mixed_content
  '''
  This paragraph contains [1mbold text[0m, [3mitalic text[0m, [1;31;48;5;237minline code[0m, and a [1;4;34mlink to [0m
  [1;4;34mdocumentation[0m[2;34m (https://docs.example.com)[0m.
  
  The next paragraph shows how text wraps naturally based on the terminal width, 
  which is especially useful for reading long documents in the terminal like man 
  pages.
  
  '''
# ---
# name: TestMarkdownFeatures.test_multiple_blockquotes
  '''
  [2;34m│[0m [2;3;34mThis is a blockquote with some important information.[0m
  
  [2;34m│[0m [2;3;34mThis is another blockquote to show multiple quotes.[0m
  
  '''
# ---
# name: TestMarkdownFeatures.test_ordered_lists
  '''
  [1;36m1[0m[1;36m.[0m First numbered item
  [1;36m2[0m[1;36m.[0m Second numbered item
  [1;36m3[0m[1;36m.[0m Third numbered item with a link [1m([0m[4;94mhttps://example.com[0m[4;94m)[0m
  [1;36m4[0m[1;36m.[0m Fourth numbered item
  
  '''
# ---
# name: TestMarkdownFeatures.test_text_formatting
  '''
  This is a paragraph with [1mbold text[0m, [3mitalic text[0m, and [1;31;48;5;237minline code[0m. Here's a [1;4;34mlink [0m
  [1;4;34mto example[0m[2;34m (https://example.com)[0m and some more text.
  
  '''
# ---
# name: TestMarkdownFeatures.test_unordered_lists
  '''
  [1;33m•[0m First item
  [1;33m•[0m Second item with bold text
  [1;33m•[0m Third item with italic text
  [1;33m•[0m Fourth item with inline code
  
  '''
# ---
# name: TestSpecialCharacters.test_special_markdown_characters
  '''
  This has *escaped* asterisks and `escaped` backticks.
  
  '''
# ---
# name: TestSpecialCharacters.test_unicode_characters
  '''
  [96m────────────────────────────────────────────────────────────────────────────────[0m
  [1;96m                                [0m[1;96mUnicode Test 🚀[0m[1;96m                                 [0m
  [96m────────────────────────────────────────────────────────────────────────────────[0m
  
  This has émojis 😀 and accénted characters: café, naïve, résumé.
  
  '''
# ---
